@@ -8,3 +8,4 @@ recursive-include photologue/templates *.html
 recursive-include photologue/contrib *
 recursive-exclude * *.py[co]
 recursive-exclude * __pycache__
+exclude photologue/res/test_unicode*.jpg
